<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/image_1"
        android:contentDescription="@string/descriptive_text" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back_button_description"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ownerIconView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/unknown"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/repository_name"
        android:textSize="28sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ownerIconView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detailCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/openInWebButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/web"
            android:contentDescription="@string/open_in_browser"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/detailCardView"
            app:layout_constraintBottom_toTopOf="@+id/programmingLanguageLayout"
            app:layout_constraintStart_toStartOf="@id/detailCardView"
            app:layout_constraintEnd_toStartOf="@id/programmingLanguageLayout"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:paddingTop="70dp"
            app:layout_constraintTop_toTopOf="@id/detailCardView"
            app:layout_constraintBottom_toBottomOf="@id/detailCardView"
            app:layout_constraintStart_toEndOf="@id/openInWebButton"
            app:layout_constraintEnd_toEndOf="@id/detailCardView"
            android:layout_marginStart="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/programming_language"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/languageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/programminglanguagename"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Stars"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/starsView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/stars_count"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Watchers"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/watchersView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/Watcherscount"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Forks"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/forksView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/Forkscount"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Open_Issues"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/openIssuesView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/OpenIssuescount"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">


                <ImageButton
                    android:id="@+id/copyUrlButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="?attr/iconTint"
                    android:src="@drawable/baseline_content_copy_24"
                    android:contentDescription="@string/copy_url"
                    android:background="?attr/selectableItemBackgroundBorderless" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_share_24"
                    app:tint="?attr/iconTint"
                    android:contentDescription="@string/share"
                    android:background="?attr/selectableItemBackgroundBorderless" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userItemsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/detailCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_repository" />

</androidx.constraintlayout.widget.ConstraintLayout>